--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ DB_CONNECTION=mysql
 DB_HOST="127.0.0.1"
 DB_USER="root"
 DB_PASSWORD=""
-# DB_PORT=3306
-DB_NAME="zetadashboard_db"
+DB_PORT=3306
+DB_NAME="node_crud"
 
 PORT=3000
 
